--- a/Challenger/StoryBoards/MyGroups.storyboard
+++ b/Challenger/StoryBoards/MyGroups.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SAt-hM-AHT">
-                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
+                                <rect key="frame" x="-1" y="64" width="375" height="56"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
@@ -59,6 +59,11 @@
                         <viewLayoutGuide key="safeArea" id="PZP-Og-3dW"/>
                     </view>
                     <navigationItem key="navigationItem" title="MyGroups" id="scK-Ie-Hk0">
+                        <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="zqj-zw-XMG">
+                            <connections>
+                                <action selector="reloadButton:" destination="V6H-Sk-N3p" id="cb7-0M-jQP"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="W66-OO-hAC">
                             <connections>
                                 <segue destination="n8L-zu-IqG" kind="presentation" id="jp6-Y1-JZZ"/>
@@ -134,8 +139,10 @@
                         <viewLayoutGuide key="safeArea" id="cqo-x7-AiS"/>
                     </view>
                     <connections>
+                        <outlet property="cancelButton" destination="Buq-nN-3og" id="THu-LU-50Z"/>
                         <outlet property="imageView" destination="p61-pr-rgz" id="bdX-7N-Xng"/>
                         <outlet property="nameOutlet" destination="IVj-45-5TW" id="bJZ-4O-wzy"/>
+                        <outlet property="saveButton" destination="aKL-SR-lSW" id="397-Rq-hqZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TxV-H7-OaA" userLabel="First Responder" sceneMemberID="firstResponder"/>
